--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# macOS .DS_Store extension
+.DS_Store
+
+# Visual Studio Code
+.vscode
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
